@@ -17,11 +17,12 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		
 		<!-- Testing dependencies -->
-		<junit.version>5.7.0</junit.version>
+		<junit.version>5.7.1</junit.version>
+		<mockito.version>3.9.0</mockito.version>
 		<slf4j.version>1.7.30</slf4j.version>
 		
 		<!-- Required dependencies -->
-		<omnibus.version>1.0.0</omnibus.version>
+		<omnibus.version>1.1.0-M2</omnibus.version>
 	</properties>
 	
 	<licenses>
@@ -82,9 +83,16 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.8.1</version>
 					<configuration>
-						<source>11</source>
-						<target>11</target>
+						<release>11</release>
 					</configuration>
+					<executions>
+						<execution>
+							<id>default-testCompile</id>
+							<configuration>
+								<release>16</release>
+							</configuration>
+						</execution>
+					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -102,7 +110,7 @@
 					<version>3.0.0-M5</version>
 					<configuration>
 						<trimStackTrace>false</trimStackTrace>
-						<argLine>-Xverify:none -XX:TieredStopAtLevel=1 -XX:-TieredCompilation</argLine>
+						<argLine>-XX:TieredStopAtLevel=1 -XX:-TieredCompilation</argLine>
 					</configuration>
 					<dependencies>
 						<dependency>
@@ -195,6 +203,12 @@
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-params</artifactId>
 				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-junit-jupiter</artifactId>
+				<version>${mockito.version}</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
